# project11_navigation

./: .gitignore  CMakeLists.txt  package.xml  plugins.xml  setup.py
action/: RunTasks.action
behavior_trees/: navigator.xml  project11_navigation.btproj
bt_logs/: navigator.db3
config/: default_stack.yaml  test.yaml
include/project11_navigation/: bt_types.h  context.h  environment.h  navigator.h  navigator_action.h  navigator_settings.h  platform.h  plugin_loader.h  plugins_loader.h  robot.h  robot_capabilities.h  task.h  task_list.h  task_plugins.h  tasklist.h  utilities.h  workflow.h
include/project11_navigation/actions/: baxevani_controller.h  crabbing_path_follower.h  debug_blackboard.h  generate_plan.h  get_sub_tasks.h  get_task_data_double.h  get_task_data_string.h  hover.h  navigator_settings_loader.h  predict_stopping_pose.h  robot_capabilities_loader.h  set_pose_from_task.h  set_task_done.h  set_trajectory_from_task.h  task_list_updater.h  task_manager.h  update_current_segment.h  update_current_task.h  update_state.h  visualize_trajectory.h
include/project11_navigation/conditions/: all_tasks_done.h  goal_reached.h  plan_needed.h
include/project11_navigation/interfaces/: curved_trajectory_to_twist_workflow.h  task_to_curved_trajectory_workflow.h  task_to_task_workflow.h  task_to_twist_workflow.h  task_wrapper.h  tasklist_to_tasklist_workflow.h  tasklist_to_twist_workflow.h
include/project11_navigation/tasks/: behavior.h  generic.h  goto.h  hover.h  idle.h  survey_area.h  survey_line.h  transit.h
include/project11_navigation/workflows/: execute_task.h  idle.h  nav_core.h  nav_core_planner.h  task_connector.h  task_manager.h  task_to_twist_stack.h
launch/: default_nav_stack.launch  test.launch
nodes/: occupancy_grid_to_display.py
src/: bt_types.cpp  context.cpp  environment.cpp  main.cpp  navigator.cpp  navigator_action.cpp  platform.cpp  plugin_loader.cpp  plugins_loader.cpp  register_behavior_tree_nodes.cpp  robot.cpp  robot_capabilities.cpp  task.cpp  task_list.cpp  task_plugins.cpp  tasklist.cpp  utilities.cpp
src/actions/: baxevani_controller.cpp  crabbing_path_follower.cpp  debug_blackboard.cpp  generate_plan.cpp  get_sub_tasks.cpp  get_task_data_double.cpp  get_task_data_string.cpp  hover.cpp  navigator_settings_loader.cpp  predict_stopping_pose.cpp  robot_capabilities_loader.cpp  set_pose_from_task.cpp  set_task_done.cpp  set_trajectory_from_task.cpp  task_list_updater.cpp  task_manager.cpp  update_current_segment.cpp  update_current_task.cpp  update_state.cpp  visualize_trajectory.cpp
src/conditions/: all_tasks_done.cpp  goal_reached.cpp  plan_needed.cpp
src/project11_navigation/: __init__.py  old_task_list.py  task.py  task_list.py
src/tasks/: behavior.cpp  generic.cpp  goto.cpp  hover.cpp  idle.cpp  survey_area.cpp  survey_line.cpp  transit.cpp
src/tools/: occupancy_grid_from_vector_map.cpp  occupancy_vector_map_from_geo.cpp
src/workflows/: execute_task.cpp  idle.cpp  nav_core.cpp  nav_core_planner.cpp  task_connector.cpp  task_manager.cpp  task_to_twist_stack.cpp
