<?xml version="1.0"?>
<package format="2">
  <name>project11_navigation</name>
  <version>0.0.0</version>
  <description>The Project11 Navigation stack package</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_core</depend>
  <depend>pluginlib</depend>
  <depend>project11_nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf2</depend>
  <depend>visualization_msgs</depend>
  <depend>yaml-cpp</depend>
  
  <export>
    <project11_navigation plugin="${prefix}/plugins.xml"/>
  </export>
</package>
